<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">To Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="developer">Developer: Hector Curi</string>
    <string name="new_list">Add New List</string>
    <string name="task_hint">Enter a Task</string>
    <string name="add">Add</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="submit">Submit</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="logout">Log Out</string>
    <string name="add_due_date">Add Due Date</string>
    <string name="remove_due_date">Remove Due Date</string>
    <string name="delete">Delete</string>
    
</resources>