<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".LoginActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/error_messages"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@id/error_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textColor="@color/red" />

    <EditText
        android:id="@id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:onClick="signIn"
        android:text="@string/submit" />
    
    <Button 
        android:id="@+id/noAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showRegistration"
        android:layout_alignParentBottom="true"
        android:text="@string/noAccount"/>
    

</RelativeLayout>